--- a/src/main/resources/templates/searchAI.html
+++ b/src/main/resources/templates/searchAI.html
@@ -77,7 +77,7 @@
 
         <div class="form-group" style="display: flex; align-items: flex-start; gap: 16px;">
 
-            <label for="nutritionFactsPrompt" style="margin-top: 8px; white-space: nowrap;">Nutrition Facts:</label>
+            <label for="ingredientsPrompt" style="margin-top: 8px; white-space: nowrap;">Ingredients:</label>
 
             <div style="display: grid; grid-template-rows: auto auto; row-gap: 8px;">
                 <input
@@ -85,7 +85,7 @@
                         id="ingredientsPrompt"
                         name="ingredientsPrompt"
                         class="form-control"
-                        placeholder="Enter your preferred ingredients, cuisine">
+                        placeholder="Enter your preferred ingredients, cuisine or allergies">
                 <small class="form-text text-muted">
                     <b>Examples:</b> I could eat fish now; I am vegetarian; How about Mexican food;
                 </small>
