--- a/src/main/resources/templates/searchAI.html
+++ b/src/main/resources/templates/searchAI.html
@@ -45,7 +45,7 @@
                         class="form-control"
                         placeholder="Enter your message to our Nutritionist">
                 <small class="form-text text-muted">
-                    <b>Examples:</b> I was at the gym; I have high Cholesterol; I can eat anything;
+                    <b>Examples:</b> I was at the gym; I am on a diet suggest something light; I am very hungry;
                 </small>
                 <button type="submit" class="btn btn-primary">Suggest nutrition value</button>
             </div>
