--- a/src/main/resources/templates/searchAI.html
+++ b/src/main/resources/templates/searchAI.html
@@ -87,7 +87,7 @@
                         class="form-control"
                         placeholder="Enter your preferred ingredients, cuisine or allergies">
                 <small class="form-text text-muted">
-                    <b>Examples:</b> I could eat fish now; I am vegetarian; How about Mexican food;
+                    <b>Examples:</b> Fish; Meat; Vegetarian; Mexican food; Chickpeas;
                 </small>
 
                 <button type="submit" class="btn btn-success">Recommend Food Recipe</button>
